# jarvis

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
jarvis/: __init__.py  config.py
jarvis/bot/: bot.py  bot_budget_integration.py  bot_family_integration.py  bot_integration.py  bot_shopping_integration.py
jarvis/core/models/: budget.py  shopping.py
jarvis/llm/: models.py
jarvis/llm/chains/: base.py  budget.py  shopping.py  task.py
jarvis/llm/graphs/: basic_conversation.py  budget_graph.py  general_graph.py  router.py  shopping_graph.py  task_graph.py
jarvis/services/: family.py  family_registration.py
jarvis/storage/: database.py
jarvis/storage/relational/: budget.py  shopping.py
jarvis/storage/relational/dal/: __init__.py  base.py  budget_dal.py  shopping_dal.py  user_dal.py
jarvis/storage/relational/models/: __init__.py  budget.py  financial.py  shopping.py  user.py
jarvis/storage/vector/: chroma_store.py
jarvis/utils/: helpers.py
migrations/: env.py
migrations/versions/: 57ece83258ba_create_empty_migration.py
scripts/: init_db.py  test_budget_save.py
