[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = "Семейный ассистент Jarvis с использованием LangChain и LangGraph"
authors = ["Petr B"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.0.1"
python-telegram-bot = "^22.0"
langchain = "^0.3.21"
langchain-groq = "^0.3.0"
langchain-openai = "^0.3.9"
langchain-huggingface = "^0.1.2"
langchain-community = "^0.3.20"
langchain-chroma = "^0.2.2"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
chromadb = "^0.6.3"
aiohttp = "^3.11.14"
requests = "^2.32.3"
pandas = "^2.2.3"
tenacity = "^9.0.0"
langgraph = "^0.3.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"  # PostgreSQL adapter
alembic = "^1.12.1"
